--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Main Start -->
     <main>
         <div class="novos-produtos">
-            <a href="">
+            <a href="/p-produtos/index.html">
                 <h4>Mais Vendidos</h4>
             </a>
         </div>
@@ -144,7 +144,7 @@
                 </div>
 
                 <div class="detalhes-produto">
-                    <a href="#">Detalhes</a>
+                    <a href="/p-item-produto/index.html">Detalhes</a>
                 </div>
             </div>
 
@@ -218,6 +218,10 @@
                 </div>
             </div>
 
+
+            <div class="conteiner-vermais">
+                <a href="#"><h2>Ver Mais.</h2></a>
+            </div>
             <!-- ------------------------------------------------------ -->
 
             
@@ -320,6 +324,10 @@
                 <div class="detalhes-produto">
                     <a href="#">Detalhes</a>
                 </div>
+            </div>
+
+            <div class="conteiner-vermais">
+                <a href="#"><h2>Ver Mais.</h2></a>
             </div>
 
             <!-- ------------------------------------------------------ -->
@@ -427,6 +435,9 @@
                 </div>
             </div>
 
+            <div class="conteiner-vermais">
+                <a href="#"><h2>Ver Mais.</h2></a>
+            </div>
             <!-- ------------------------------------------------------ -->
 
             
@@ -530,6 +541,10 @@
                 <div class="detalhes-produto">
                     <a href="#">Detalhes</a>
                 </div>
+            </div>
+
+            <div class="conteiner-vermais">
+                <a href="#"><h2>Ver Mais.</h2></a>
             </div>
 
             <!-- ------------------------------------------------------ -->
