--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Main Start -->
     <main>
         <div class="novos-produtos">
-            <a href="/p-produtos/index.html">
+            <a href="/produtos.html">
                 <h4>Mais Vendidos</h4>
             </a>
         </div>
@@ -144,7 +144,7 @@
                 </div>
 
                 <div class="detalhes-produto">
-                    <a href="/p-item-produto/index.html">Detalhes</a>
+                    <a href="/items.html">Detalhes</a>
                 </div>
             </div>
 
