--- a/USUARIO/index.html
+++ b/USUARIO/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+
+    <link rel="stylesheet" href="assinc/css/style.css">
+    <script src="assinc/js/script.js"></script>
 </head>
 <body>
-    
+    <div class="conteiner">
+        <label for="nome">Nome: </label>
+        <input type="text" id="nome">
+
+        <label for="telefone">Tel: </label>
+        <input type="number" id="telefone">
+
+        <label for="email">E-mail: </label>
+        <input type="email" id="email">
+
+        <label for="endereco">Endereço: </label>
+        <input type="text" id="endereco" placeholder="Cidade Que voce mora?">
+    </div>
+
+    <div class="conteiner-conteudos"></div>
 </body>
 </html>
